--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="promo__icon">
                         <img src="icons/main_screen/hand-cart.png" alt="hand-cart">
-                        Бесплатная доставка 
+                        Бесплатная доставка
                     </div>
                     <div class="promo__icon">
                         <img src="icons/main_screen/messages.png" alt="messages">
@@ -48,7 +48,7 @@
 
                 <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
                 <div class="promo__link">
-                    или 
+                    или
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
                 </div>
             </div>
@@ -56,6 +56,38 @@
         </div>
     </div>
 
+    <section class="advantages">
+        <div class="container">
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <img src="icons/advantages/cup.png" alt="cup" class="advantages_icon">
+                    <div class="advantages_subtitle">Делимся опытом</div>
+                    <div class="advantages__descr">Наши сотрудники всегда готовы поделиться своим опытом,
+                        так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/advantages/heart.png" alt="heart" class="advantages_icon">
+                    <div class="advantages_subtitle">Заботимся о здоровье</div>
+                    <div class="advantages__descr">Мы работаем для того,
+                        чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/advantages/shoe.png" alt="shoe" class="advantages_icon">
+                    <div class="advantages_subtitle">Учим бегать</div>
+                    <div class="advantages__descr">Помогаем с обучением
+                        правильной технике бега!
+                        Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
 </body>
 
 </html>
