--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/style.min.css">
-   </head>
+</head>
 
 <body>
     <div class="promo">
@@ -87,7 +87,22 @@
         </div>
     </section>
 
-    
+    <section class="consultation">
+        <div class="container">
+            <h2 class="title title_left">Получите бесплатную консультацию<br>
+                по подбору пульсометра </h2>
+            <div class="consultation__descr">Просто заполните форму заявки <br>
+                и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form" action="#">
+                <input name="name" type="text" placeholder="Ваше имя" required>
+                <input name="phone" type="number" placeholder="Ваш телефон" required>
+                <input name="email" type="email" placeholder="Ваш E-mail" required>
+                <button class="button button_submit">Заказать консультацию</button>
+            </form>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
