--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,12 @@
     <title>PULSE</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -54,7 +55,7 @@
             </div>
 
         </div>
-    </div>
+    </section>
 
     <section class="advantages">
         <div class="container">
@@ -102,7 +103,27 @@
         </div>
     </section>
 
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/slide_1.jpg" alt="slide_1">
+                </div>
+                <div>
+                    <img src="img/slide_2.jpg" alt="slide_2">
+                </div>
+                <div>
+                    <img src="img/slide_3.jpg" alt="slide_3">
+                </div>
+            </div>
+        </div>
+    </section>
 
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
