ended email message in modal window

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
                 и мы перезвоним вам в течении 10 минут</div>
             <form id="consultation-form" class="feed-form" action="#">
                 <input name="name" type="text" placeholder="Ваше имя" required>
-                <input name="phone" type="number" placeholder="Ваш телефон" required>
+                <input name="phone"  placeholder="Ваш телефон" required>
                 <input name="email" type="email" placeholder="Ваш E-mail" required>
                 <button class="button button_submit">Заказать консультацию</button>
             </form>
@@ -484,7 +484,7 @@
             <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name" type="text" placeholder="Ваше имя">
-                <input name="phone" type="number" placeholder="Ваш телефон">
+                <input name="phone"  placeholder="Ваш телефон">
                 <input name="email" type="email" placeholder="Ваш E-mail">
                 <button class="button button_submit">Заказать консультацию</button>
             </form>
@@ -496,7 +496,7 @@
             <div class="modal__descr">Пульсометр Polar FT1</div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name" type="text" placeholder="Ваше имя" required>
-                <input name="phone" type="number" placeholder="Ваш телефон" required>
+                <input name="phone"  placeholder="Ваш телефон" required>
                 <input name="email" type="email" placeholder="Ваш E-mail" required>
                 <button class="button button_submit">купить</button>
             </form>
@@ -515,6 +515,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
